--- a/winter-resume-openfont.cls
+++ b/winter-resume-openfont.cls
@@ -12,7 +12,7 @@
 \usepackage[hmargin=1.25cm, vmargin=0.7cm]{geometry}
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage[hidelinks]{hyperref}
-%\usepackage{titlesec}
+\usepackage{titlesec}
 \usepackage[absolute]{textpos}
 \usepackage[UKenglish]{babel}
 \usepackage[UKenglish]{isodate}
