fix header alignment

--- a/main.tex
+++ b/main.tex
@@ -41,19 +41,32 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{minipage}[t]{0.68\textwidth}
-\namesection{}{Peter B. Winter, Ph.D.}
+%\namesection{}{Peter B. Winter, Ph.D.}
+
+\begin{flushleft}
+\myname{Peter B. Winter, Ph.D.}
+
+\links{
+Work://
+\href{https://amaral.northwestern.edu/people/winter/}{\custombold{Amaral-Lab}} |
+LinkedIn://
+\href{https://www.linkedin.com/in/peter-winter}{\custombold{peter-winter}} |
+Github:// \href{https://github.com/peterwinter}{\custombold{peterwinter}}
+}
+
+\end{flushleft}
 \end{minipage}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%     Contact Info
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \hfill
 \begin{minipage}[t]{0.30\textwidth}
 \begin{flushleft}
 peterwinteriii@gmail.com \\
 Mobile: 413.459.3058 \\
 Google: TBD \\
-Work://
-\href{https://amaral.northwestern.edu/people/winter/}{\custombold{Amaral-Lab}} \\
-LinkedIn://
-\href{https://www.linkedin.com/in/peter-winter}{\custombold{peter-winter}} \\
-Github:// \href{https://github.com/peterwinter}{\custombold{peterwinter}} \\
 \end{flushleft}
 \end{minipage}
 \noindent\makebox[\linewidth]{\color{headings}\rule{\paperwidth}{0.4pt}}
@@ -86,29 +99,28 @@ Github:// \href{https://github.com/peterwinter}{\custombold{peterwinter}} \\
 volumes of movement and behavior data of micro-organisms}
 \vspace{\topsep}
 \begin{tightemize}
-\item Team lead (6 people). Interdisciplinary collaboration of graduate students, post-doctoral and research staff
+\item Team lead (6 people). Interdisciplinary collaboration with biologists, computational researchers, software developers.
 \item Designed machine-learning algorithm for robust, reproducible feature selection in datasets with highly co-linear features
 \end{tightemize}
 
 %\runsubsection{Northwestern University}
-%\descript{| PhD Candidate }
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 
 \runsubsection{High-Throughput Video Analysis} \\
 \location{Developed infrastructure to process large volumes video footage to obtain movement and behavior data}
 \begin{tightemize}
-\item Team Lead (4 people) across bio and computational labs to produce novel product novel software package for computing complex analysis of biological data
- \item  published  method for identification of individual animals when tracking multiple individuals in confined space. 
+\item Team Lead (4 people). Managing collaboration across an experimental biological lab and a computational complex-systems lab.
+\item  Published paper \& software package for identification of individual animals when tracking multiple individuals in confined space
 \end{tightemize}
 
 \sectionsep
 
 \runsubsection{Teaching Data Science} \\
-\location{process large volumes video footage and to extract movement and behavior data}
+\location{As a avid learner, I am extremely interested in how to transfer knowledge to other people. }
 \begin{tightemize}
-\item two time data-science bootcamp instructor (Intro to Programming for Big Data)
-\item Mentor for 8+ Graduate \& Undergraduate Students
-\item TA and Lecturer. (Intro to Network Science)
+\item Data-science bootcamp instructor (Big Data Initiative: Programming Bootcamp) | 2014 \& 2015
+\item Mentor for 6+ Graduate \& Undergraduate Students | 2010 - Present
+\item TA and Lecturer. (Intro to Computational Research) | 2011
 \end{tightemize}
 
 \sectionsep
@@ -149,9 +161,9 @@ volumes of movement and behavior data of micro-organisms}
 \sectionsep
 
 \section{Education}
-\runsubsection{PhD Chemical \& Biological Engineering} \\
+\runsubsection{PhD -- Chemical \& Biological Engineering} \\
 %\location{PhD in Chemical and Biological Engineering | Dec 2015 | Evanston, Il}
-\location{Sept 2008 – Dec 2015 | Northwestern University | Evanston, IL.}
+\location{Dec 2015 | Northwestern University | Evanston, IL.}
 
 \begin{tightemize}
 \item \custombold{Thesis:} Quantifying Complex Behavioral Phenotypes in \emph{C. elegans}
@@ -162,7 +174,7 @@ volumes of movement and behavior data of micro-organisms}
 \sectionsep
 % \textbullet{} GPA: 3.72/4.00
 
-\runsubsection{BE Chemical Engineering} \\
+\runsubsection{BE  -- Chemical Engineering} \\
 \location{ May 2008 |  McGill University | Montreal, Quebec}
 \sectionsep
 
