adjust section fonts. add underlines

--- a/main.tex
+++ b/main.tex
@@ -69,6 +69,7 @@ Mobile: 413.459.3058 \\
 Google: TBD \\
 \end{flushleft}
 \end{minipage}
+
 \noindent\makebox[\linewidth]{\color{headings}\rule{\paperwidth}{0.4pt}}
 \vspace{-15pt}
 
@@ -90,7 +91,7 @@ Google: TBD \\
 %     EXPERIENCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Projects}
+\section{\underline{Projects}}
 \runsubsection{Discover Meaningful Health Metrics}
 %\descript{ }
 %\vspace{\topsep} % Hacky fix for awkward extra vertical space
@@ -143,7 +144,7 @@ volumes of movement and behavior data of micro-organisms}
 %     AWARDS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Awards} 
+\section{\underline{Awards}}
 \begin{tabular}{rll}
 2013 – 2015	     &  National Research and Service Award (NRSA) Fellowship\\
 2011 – 2013	     & Mechanisms of Aging and Dementia Fellowship\\
@@ -151,7 +152,7 @@ volumes of movement and behavior data of micro-organisms}
 \end{tabular}
 \sectionsep
 
-\section{Experience}
+\section{\underline{Experience}}
 \runsubsection{Computational Scientist } \\
 \location{ Jan 2016 - Present | Northwestern University | Evanston, IL.}
 \begin{tightemize}
@@ -160,7 +161,7 @@ volumes of movement and behavior data of micro-organisms}
 
 \sectionsep
 
-\section{Education}
+\section{\underline{Education}}
 \runsubsection{PhD -- Chemical \& Biological Engineering} \\
 %\location{PhD in Chemical and Biological Engineering | Dec 2015 | Evanston, Il}
 \location{Dec 2015 | Northwestern University | Evanston, IL.}
@@ -178,8 +179,7 @@ volumes of movement and behavior data of micro-organisms}
 \location{ May 2008 |  McGill University | Montreal, Quebec}
 \sectionsep
 
-\section{Other}
-\sectionsep
+\section{\underline{Other}}
 Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy strategic board games | learning math | optimizing habits
 
 
@@ -229,12 +229,12 @@ Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy st
 %     SKILLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Skills}
-\sectionsep
+\section{\underline{Skills}}
+%\sectionsep
 \subsection{Data Analysis}
 \subsection{\& Visualization}
 \sectionsep
-\location{techniques:}
+\location{Techniques}
 \textbullet{} time-series analysis  \\ 
 \textbullet{} image processing \\  
 \textbullet{} model selection \\  
@@ -243,28 +243,28 @@ Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy st
 \textbullet{} machine learning  \\ 
 \sectionsep
 
-\location{tools:}
-\textbullet{} numpy (6+ years) \\ 
-\textbullet{} pandas (3+ years) \\ 
-\textbullet{} scikit-learn (2+ years) \\
-\textbullet{} matplotlib (8+ years) \\ 
-\textbullet{} seaborn(3+ years) \\
+\location{Tools}
+\textbullet{} matplotlib | 8+ years \\ 
+\textbullet{} numpy | 6+ years \\ 
+\textbullet{} pandas | 3+ years \\ 
+\textbullet{} seaborn | 3+ years \\
+\textbullet{} scikit-learn | 2+ years \\
 \sectionsep
 \sectionsep
 
 \subsection{Software Development}
 \sectionsep
 
-\textbullet{} Python (8+ years | 10,000+ lines)\\
-\textbullet{}  bash \& unix tools (8+ years) \\
+\textbullet{} Python | 8+ years | 10,000+ lines\\
+\textbullet{}  bash \& unix tools | 8+ years \\
  \sectionsep
 
-\location{optimize performance:}
+\location{Performance optimization}
 \textbullet{} cprofiler \\ 
 \textbullet{} runsnake \\ 
 \sectionsep
 
-\location{high-throughput data formats}
+\location{High-throughput data formats}
 \textbullet{} NoSQL \\  
 \textbullet{} MongoDB \\
 \textbullet{} HDF5 \\ 
@@ -281,17 +281,17 @@ Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy st
 \sectionsep
 
 \location{Presentations}
-\textbullet{} 100+ presentations \\
-\textbullet{} scientific conferences \\
-\textbullet{} public outreach events \\
-\textbullet{} guest lectures \\
+\textbullet{} presentations | 100+  \\
+\textbullet{} scientific conferences | \\
+\textbullet{} public outreach events | 4 \\
+\textbullet{} guest lectures | 2\\
 \sectionsep
 
 \location{Writing}
 \textbullet{} research papers \\
 \textbullet{} blog posts \\ 
 \textbullet{} reports \\
-\textbullet{} grant applications \\
+\textbullet{} grant applications | 5+ \\
 
 % \location{Teaching}
 % \textbullet{} 8 mentees \\
