fix links under name

--- a/main.tex
+++ b/main.tex
@@ -47,11 +47,11 @@
 \myname{Peter B. Winter, Ph.D.}
 
 \links{
-Work://
-\href{https://amaral.northwestern.edu/people/winter/}{\custombold{Amaral-Lab}} |
-LinkedIn://
-\href{https://www.linkedin.com/in/peter-winter}{\custombold{peter-winter}} |
-Github:// \href{https://github.com/peterwinter}{\custombold{peterwinter}}
+\custombold{Work://} \href{https://amaral.northwestern.edu/people/winter/}{https://amaral.northwestern.edu/people/winter/} \\
+\custombold{LinkedIn://} \href{https://www.linkedin.com/in/peter-winter}{https://www.linkedin.com/in/peter-winter} \\
+% \href{https://www.linkedin.com/in/peter-winter}{\https://www.linkedin.com/in/peter-winter} 
+\custombold{Github://} 
+\href{https://github.com/peterwinter}{https://github.com/peterwinter}
 }
 
 \end{flushleft}
@@ -282,16 +282,16 @@ Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy st
 
 \location{Presentations}
 \textbullet{} presentations | 100+  \\
-\textbullet{} scientific conferences | \\
-\textbullet{} public outreach events | 4 \\
+\textbullet{} scientific conferences | 15 \\
+\textbullet{} public outreach | 5 \\
 \textbullet{} guest lectures | 2\\
 \sectionsep
 
 \location{Writing}
-\textbullet{} research papers \\
-\textbullet{} blog posts \\ 
-\textbullet{} reports \\
-\textbullet{} grant applications | 5+ \\
+\textbullet{} research papers | 4.5\\
+\textbullet{} blog posts | 10+\\ 
+\textbullet{} internal reports | 50+\\
+\textbullet{} grant applications | 7+ \\
 
 % \location{Teaching}
 % \textbullet{} 8 mentees \\
