add links for waldo project

--- a/main.tex
+++ b/main.tex
@@ -96,7 +96,7 @@ Google: TBD \\
 %\descript{ }
 %\vspace{\topsep} % Hacky fix for awkward extra vertical space
 
-\location{Developed a tool for biologists to extract health metrics from large \\
+\location{I developed a tool for biologists to extract health metrics from large \\
 volumes of movement and behavior data of micro-organisms}
 \vspace{\topsep}
 \begin{tightemize}
@@ -108,7 +108,8 @@ volumes of movement and behavior data of micro-organisms}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 
 \runsubsection{High-Throughput Video Analysis} \\
-\location{Developed infrastructure to process large volumes video footage to obtain movement and behavior data}
+\location{I developed infrastructure to process large volumes video footage 
+to obtain movement and behavior data | Links: \href{https://amaral.northwestern.edu/resources/software/waldo}{Software},  \href{http://www.nature.com/articles/srep34859}{Paper} }
 \begin{tightemize}
 \item Team Lead (4 people). Managing collaboration across an experimental biological lab and a computational complex-systems lab.
 \item  Published paper \& software package for identification of individual animals when tracking multiple individuals in confined space
