adjust side column spacing

--- a/main.tex
+++ b/main.tex
@@ -64,9 +64,9 @@
 \hfill
 \begin{minipage}[t]{0.30\textwidth}
 \begin{flushleft}
-peterwinteriii@gmail.com \\
-Mobile: 413.459.3058 \\
-Google: TBD \\
+\custombold{Email:} peterwinteriii@gmail.com \\
+\custombold{Mobile:}  413.459.3058 \\
+\custombold{Google:}  TBD \\
 \end{flushleft}
 \end{minipage}
 
@@ -168,7 +168,7 @@ to obtain movement and behavior data | Links: \href{https://amaral.northwestern.
 \location{Dec 2015 | Northwestern University | Evanston, IL.}
 
 \begin{tightemize}
-\item \custombold{Thesis:} Quantifying Complex Behavioral Phenotypes in \emph{C. elegans}
+\item \customboldB{Thesis:} Quantifying Complex Behavioral Phenotypes in \customitl{C. elegans}
 
 \item co-founded colloquium for graduate students to practice oral communication.
 \end{tightemize}
@@ -231,7 +231,7 @@ Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy st
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{\underline{Skills}}
-%\sectionsep
+\sectionsep
 \subsection{Data Analysis}
 \subsection{\& Visualization}
 \sectionsep
@@ -252,6 +252,8 @@ Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy st
 \textbullet{} scikit-learn | 2+ years \\
 \sectionsep
 \sectionsep
+\sectionsep
+
 
 \subsection{Software Development}
 \sectionsep
@@ -274,8 +276,9 @@ Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy st
 \location{High-throughput computing}
 \textbullet{} torque \\
 \textbullet{} map-reduce \\
-\sectionsep
 
+\sectionsep
+\sectionsep
 \sectionsep
 
 \subsection{Clear Communication}
