--- a/winter-resume-openfont.cls
+++ b/winter-resume-openfont.cls
@@ -19,9 +19,9 @@
 \usepackage{fontspec,xltxtra,xunicode}
 
 % Color definitions
-\definecolor{date}{HTML}{666666} 
-\definecolor{primary}{HTML}{2b2b2b} 
-\definecolor{name}{HTML}{333333}
+\definecolor{date}{HTML}{666666} %grey
+\definecolor{primary}{HTML}{2b2b2b} %darkgrey
+\definecolor{name}{HTML}{333333} %darkgrey
 %\definecolor{headings}{HTML}{6A6A6A}
 %\definecolor{subheadings}{HTML}{333333}
 
@@ -33,7 +33,11 @@
 \defaultfontfeatures{Mapping=tex-text}
 \setmainfont[Color=primary, Path = fonts/lato/]{Lato-Lig}
 \setsansfont[Scale=MatchLowercase,Mapping=tex-text, Path = fonts/raleway/]{Raleway-ExtraLight}
+
+\newcommand{\customitl}[1]{\color{primary}\fontspec[Path = fonts/lato/]{Lato-LigIta}\selectfont #1 \normalfont}
 \newcommand{\custombold}[1]{\color{subheadings}\fontspec[Path = fonts/lato/]{Lato-Reg}\selectfont #1 \normalfont}
+\newcommand{\customboldB}[1]{\color{headings}\fontspec[Path = fonts/lato/]{Lato-Reg}\selectfont #1 \normalfont}
+
 
 % Date command
 \setlength{\TPHorizModule}{1mm}
@@ -45,9 +49,9 @@ Last Updated on
 \today
 \end{textblock}}
 
-\newcommand{\myname}[1]{\color{name}\raggedright\scshape\fontspec[Path = fonts/lato/]{Lato-Lig}\fontsize{26pt}{30pt}\selectfont {#1 \\} \normalfont}
+\newcommand{\myname}[1]{\color{name}\raggedright\scshape\fontspec[Path = fonts/lato/]{Lato-Reg}\fontsize{26pt}{30pt}\selectfont {#1 \\} \normalfont}
 
-\newcommand{\links}[1]{\color{subheadings}\raggedright\scshape\fontspec[Path = fonts/lato/]{Lato-Lig}\fontsize{8pt}{10pt}\selectfont {#1 \\} \normalfont   }
+\newcommand{\links}[1]{\color{headings}\raggedright\scshape\fontspec[Path = fonts/lato/]{Lato-Reg}\fontsize{10pt}{12pt}\selectfont {#1 \\} \normalfont   }
 
 
 \titlespacing{\section}{0pt}{0pt}{0pt}
@@ -61,7 +65,7 @@ Last Updated on
 % (ie. Data Analysis and Visualization.
 % Subeadings command
 \titleformat{\subsection}{\color{subheadings}
-\fontspec[Path = fonts/lato/]{Lato-Bol}\fontsize{12pt}{12pt}\selectfont\bfseries\uppercase}{}{0em}{}
+\fontspec[Path = fonts/lato/]{Lato-Reg}\fontsize{12pt}{12pt}\selectfont\bfseries\uppercase}{}{0em}{}
 \titlespacing{\subsection}{0pt}{\parskip}{-\parskip}
 \titlespacing{\subsubsection}{0pt}{\parskip}{-\parskip}
 
