--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,8 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+
 \documentclass[]{winter-resume-openfont}
 
 
@@ -91,20 +93,25 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{\underline{Objective}}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}
-\item Data analysis \& visualization expert 
-\item Specialized in communicating results to non-technical audience
-\item Looking for team-oriented environment to answer complex questions
-\end{tightemize}
+%\vspace{\topsep} % Hacky fix for awkward extra vertical space
+%\begin{tightemize}
+%\item Data analysis \& visualization expert 
+%\item Specialized in communicating results to non-technical audience
+%\item Looking for team-oriented environment to answer complex questions
+%\end{tightemize}
+
+\begin{tabular}{lll}
+\textbullet{}   & Data analysis \& visualization expert 	\\
+\textbullet{}   & Specialized in communicating results to non-technical audience \\
+\textbullet{}  & Looking for team-oriented environment to answer complex questions\\
+\end{tabular}
+
 
 \sectionsep
 
 \section{\underline{Experience}}
-
 \sectionsep
-
-\runsubsection{Computational Scientist } \\
+\runsubsection{Data Scientist \& Computational Researcher } \\
 \descript{ Northwestern University | Evanston, IL. | 2008 - Present}
 
 \sectionsep
@@ -114,12 +121,10 @@
 %\vspace{\topsep} % Hacky fix for awkward extra vertical space
 
 %\location{}
-%\vspace{\topsep}
+\vspace{\topsep}
 \begin{tightemize}
-\item Developed a tool for biologists to extract health metrics from large
-volumes of movement and behavior data of micro-organisms
+\item Developed machine-learning tool to extract the most descriptive health metrics from the movement of 1,000+ micro-organisms
 \item Team lead (6 people).  Collaborated with biologists, computational researchers, software developers
-\item Designed machine-learning algorithm for robust, reproducible feature selection in datasets with highly co-linear features
 \end{tightemize}
 
 %\runsubsection{Northwestern University}
@@ -128,37 +133,22 @@ volumes of movement and behavior data of micro-organisms
 
 \location{High-Throughput Analysis of Video Data}
 \begin{tightemize}
-\item Built infrastructure to process large volumes video footage 
-to obtain movement and behavior data | Links: \href{https://amaral.northwestern.edu/resources/software/waldo}{Software},  \href{http://www.nature.com/articles/srep34859}{Paper} 
+\item Automated infrastructure to process 10+ TB of movement and behavior data from video footage of micro-organisms
 \item Team Lead (4 people).  Collaborated across an experimental biological lab and a computational complex-systems lab
-\item  Published paper \& software package for identification of individual animals when tracking multiple individuals in confined space
+\item  Published  \href{http://www.nature.com/articles/srep34859}{paper}  \& \href{https://amaral.northwestern.edu/resources/software/waldo}{software} for identifying individual animals in a crowd
 \end{tightemize}
 
 \sectionsep
 
-%\location{Teaching Data Science}
-%\begin{tightemize}
-%\item As a avid learner, I am extremely interested in how to transfer knowledge to other people. 
-%\item Data-science bootcamp instructor | Big Data Initiative: Programming Bootcamp | 2014 \& 2015
-%\item Mentor for 6+ Graduate \& Undergraduate Students | 2010 - Present
-%\item TA and Lecturer | Intro to Computational Research | 2011
-%\end{tightemize}
+
+\location{Teaching \& Mentourship}
+\begin{tightemize}
+\item Bootcamp instructor | Big Data Initiative | 2014 \& 2015
+\item TA and Lecturer  | Intro to Computational Research | 2011
+\item  Mentor | 6+ Graduate \& Undergraduate Students | 2010 - Present
+\end{tightemize}
 
 \sectionsep
-
-% \runsubsection{Coursera}
-% \descript{| KPCB Fellow + Software Engineering Intern }
-% \location{Expected June 2014 – Sep 2014 | Mountain View, CA}
-% \vspace{\topsep} % Hacky fix for awkward extra vertical space
-% \begin{tightemize}
-% \item 52 out of 2500 applicants chosen to be a KPCB Fellow 2014.
-% \end{tightemize}
-% \sectionsep
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     RESEARCH
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     AWARDS
@@ -166,6 +156,7 @@ to obtain movement and behavior data | Links: \href{https://amaral.northwestern.
 
 \section{\underline{Honors \& Awards}}
 \begin{tabular}{lll}
+%\begin{tabular}{|y{85pt}||y{65pt}|y{65pt}|}
 \textbullet{}   & National Research and Service Award (NRSA) Fellowship & 2013 – 2015	\\
 \textbullet{}   & Mechanisms of Aging and Dementia Fellowship & 2011 – 2013\\
 \textbullet{}  &Predictive Science and Engineering Design Fellowship & 2010 – 2011\\
@@ -173,22 +164,30 @@ to obtain movement and behavior data | Links: \href{https://amaral.northwestern.
 \sectionsep
 
 
+%\sectionsep
 
+%\section{\underline{Teaching \& Mentourship}}
+%\location{Teaching Data Science}
+%\begin{tabular}{lll}
+%\textbullet{} &Bootcamp instructor | Big Data Initiative & 2014 \& 2015	\\
+%\textbullet{} &TA and Lecturer  | Intro to Computational Research & 2011\\
+%\textbullet{} &Mentor | 6+ Graduate \& Undergraduate Students & 2010 - Present\\
+%\end{tabular}
 
 \sectionsep
 
 
 
-\section{\underline{Education}}
-
+\section{\underline{Education \& Training}}
+\sectionsep
 \runsubsection{Post Doctoral Fellow} \\
 \location{Northwestern University | Evanston, IL.  | Jan 2016 - Present }
 \sectionsep
 
 \runsubsection{Doctor of Philosophy} \\
 %\location{PhD in Chemical and Biological Engineering | Dec 2015 | Evanston, Il}
-\location{Northwestern University | Chemical \& Biological Engineering } % | Dec 2015
-\location{ Evanston, IL.}
+\location{Northwestern University | Evanston, IL.} % 
+\location{ Chemical \& Biological Engineering | Dec 2015}
 
 \begin{tightemize}
 \item \customboldB{Thesis:} Quantifying Complex Behavioral Phenotypes in \customitl{C. elegans}
@@ -200,12 +199,15 @@ to obtain movement and behavior data | Links: \href{https://amaral.northwestern.
 % \textbullet{} GPA: 3.72/4.00
 
 \runsubsection{Bachelors of Engineering } \\
-\location{ Chemical Engineering}
-\location{ May 2008 |  McGill University | Montreal, Quebec}
+\location{ McGill University | Montreal, Quebec}
+\location{ Chemical Engineering | May 2008}
 \sectionsep
 
 \section{\underline{Other}}
-Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy strategic board games | learning math | optimizing habits
+\begin{tabular}{lll}
+\textbullet{}   & 	Native fluency in English | Fluency in German \\
+\textbullet{}   & Enjoy strategic board games | Learning math | Optimizing habits\\
+\end{tabular}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -276,14 +278,15 @@ Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy st
 \textbullet{} scikit-learn | 2+ years \\
 \sectionsep
 \sectionsep
-\sectionsep
+%\sectionsep
 
 
 \subsection{Software Development}
 \sectionsep
 
-\textbullet{} Python | 8+ years | 10,000+ lines\\
+\textbullet{} python | 8+ years \\
 \textbullet{}  bash \& unix tools | 8+ years \\
+\textbullet{}  git \& mercurial | 7+ years \\
  \sectionsep
 
 \location{Performance optimization}
@@ -303,7 +306,7 @@ Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy st
 
 \sectionsep
 \sectionsep
-\sectionsep
+%\sectionsep
 
 \subsection{Clear Communication}
 \sectionsep
@@ -316,25 +319,20 @@ Native fluency in English \textbullet{} fluency in German \textbullet{} enjoy st
 \sectionsep
 
 \location{Writing}
-\textbullet{} research papers | 4.5\\
+\textbullet{} research papers | 3.5\\
 \textbullet{} blog posts | 9\\ 
 \textbullet{} internal reports | 50+\\
 \textbullet{} grant applications | 7+ \\
+\sectionsep
 
-% \location{Teaching}
-% \textbullet{} 8 mentees \\
-% (graduate, \& undergraduate students) \\
-% \textbullet{} classroom lectures \\(Intro to Network Science) \\ 
-% \textbullet{} two-time boot-camp Instructor \\
-% (Intro. to Programming for Big Data)\\
+\location{Collaboration}
+\textbullet{} self-motivated\\
+\textbullet{} enthusiastic\\
+\textbullet{} constructive feedback\\
+\textbullet{} conflict mediation \\
 
 \sectionsep
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%     COLUMN TWO
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{minipage} 
 \end{document}  \documentclass[]{article}
