update website + education sections

--- a/main.tex
+++ b/main.tex
@@ -49,10 +49,10 @@
 \myname{Peter B. Winter, Ph.D.}
 
 \links{
-\custombold{Work://} \href{https://amaral.northwestern.edu/people/winter/}{https://amaral.northwestern.edu/people/winter/} \\
-\custombold{LinkedIn://} \href{https://www.linkedin.com/in/peter-winter}{https://www.linkedin.com/in/peter-winter} \\
+\custombold{Website:} \href{http://peterbwinter.com}{http://peterbwinter.com}  \\
+\custombold{LinkedIn:} \href{https://www.linkedin.com/in/peter-winter}{https://www.linkedin.com/in/peter-winter} \\
 % \href{https://www.linkedin.com/in/peter-winter}{\https://www.linkedin.com/in/peter-winter} 
-\custombold{Github://} 
+\custombold{Github:} 
 \href{https://github.com/peterwinter}{https://github.com/peterwinter}
 }
 
@@ -180,14 +180,25 @@
 
 \section{\underline{Education \& Training}}
 \sectionsep
-\runsubsection{Post Doctoral Fellow} \\
-\location{Northwestern University | Evanston, IL.  | Jan 2016 - Present }
+%\runsubsection{Post Doctoral Fellow} \\
+%\location{Northwestern University | Evanston, IL.  | Jan 2016 - Present }
+\location{Postdoctoral Fellow}
+\begin{tightemize}
+\item Northwestern University | Evanston, IL.  | Jan 2016 - Present
+\end{tightemize}
 \sectionsep
 
-\runsubsection{Doctor of Philosophy} \\
+%\runsubsection{Doctor of Philosophy} \\
 %\location{PhD in Chemical and Biological Engineering | Dec 2015 | Evanston, Il}
-\location{Northwestern University | Evanston, IL.} % 
-\location{ Chemical \& Biological Engineering | Dec 2015}
+%\location{Northwestern University | Evanston, IL.} % 
+%\location{ Chemical \& Biological Engineering | Dec 2015}
+\location{Doctor of Philosophy}
+\begin{tightemize}
+\item Northwestern University | Evanston, IL. 
+\item Chemical \& Biological Engineering | Dec 2015
+\end{tightemize}
+%\sectionsep
+
 
 \begin{tightemize}
 \item \customboldB{Thesis:} Quantifying Complex Behavioral Phenotypes in \customitl{C. elegans}
@@ -198,9 +209,15 @@
 \sectionsep
 % \textbullet{} GPA: 3.72/4.00
 
-\runsubsection{Bachelors of Engineering } \\
-\location{ McGill University | Montreal, Quebec}
-\location{ Chemical Engineering | May 2008}
+%\runsubsection{Bachelors of Engineering } \\
+%\location{ McGill University | Montreal, Quebec}
+%\location{ Chemical Engineering | May 2008}
+\location{Bachelors of Engineering}
+\begin{tightemize}
+\item McGill University | Montreal, Quebec
+\item Chemical Engineering | May 2008
+\end{tightemize}
+
 \sectionsep
 
 \section{\underline{Other}}
@@ -318,12 +335,12 @@
 \textbullet{} guest lectures | 2\\
 \sectionsep
 
-\location{Writing}
-\textbullet{} research papers | 3.5\\
-\textbullet{} blog posts | 9\\ 
-\textbullet{} internal reports | 50+\\
-\textbullet{} grant applications | 7+ \\
-\sectionsep
+%\location{Writing}
+%\textbullet{} research papers | 3.5\\
+%\textbullet{} blog posts | 9\\ 
+%\textbullet{} internal reports | 50+\\
+%\textbullet{} grant applications | 7+ \\
+%\sectionsep
 
 \location{Collaboration}
 \textbullet{} self-motivated\\
